- Add .odt, .ods & .odp (LibreOffice docs) to Portal Notes attached file in PortalNotes.php
- Fix StudentGrades.php student Help text in Help_en.php
- Fix Auto & Edit pull-downs options Advanced Search in Search.fnc.php
- Correct Class Rank field type to checkbox in EditReportCardGrades.php
- Fix Do not include students enrolled in previous school years in GetStuList.fnc.php

Changes in 2.8.19
-----------------
- Email Discipline Referral feature, sponsored by Hisham Abu Dawoud
- Add 'Last Login' column label in Export.php
- Bugfix do not pass prompt when Cancel in Prompts.php
- Fix bug when email set without any contact + bug when current student in CreateParents.php
- Fix propose to create user in Moodle in Moodle/functions.php
- Add .no-touch CSS class in warehouse.js & stylesheet.css
- Fix #115 SQL bug more than one row returned by a subquery in TakeAttendance.php

Changes in 2.8.18
-----------------
- Bugfix include Edit Pull-Downs when generating options in StudentUsersInfo.fnc.php
- Align inputs (same height) + add .checkbox-label CSS class in stylesheet.css & Inputs.php
- Add .no-input-value CSS class in stylesheet.css & Inputs.php
- Add .textarea CSS class in stylesheet.css & Inputs.php
- Fix advanced search forms (student & user) URL > 2000 chars in warehouse.js
- Better AJAX Courses Requests DIV display in Requests.php
- Fix #114 PHP error Cannot redeclare SendEmail()

Changes in 2.8.17
-----------------
- Fix $function_to_remove var name typo in Actions.php
- Update "Display Options Format" string translation (ES & FR)
- Adjust ProperDate() short month display according to Preferences in Date.php
- Handle IS NOT NULL cases before executing SQL in database.inc.php
- Bugfix SQL error value too long for type varchar(10) in MarkingPeriods.php
- Bugfix force required school period if none in Courses.php

Changes in 2.8.16
-----------------
- Fix SQL error invalid input syntax for type numeric in _makeLetterGrade.fnc.php

Changes in 2.8.15
-----------------