@@ -12,6 +12,7 @@ Changes in 2.8.20
 - Fix Auto & Edit pull-downs options Advanced Search in Search.fnc.php
 - Correct Class Rank field type to checkbox in EditReportCardGrades.php
 - Fix Do not include students enrolled in previous school years in GetStuList.fnc.php
+- Limit Requests Course DIV height in stylesheet.css
 
 Changes in 2.8.19
 -----------------
